[project]
name = "idhagnbot"
version = "0.0.0"
description = "Simple chatbot for Tencent QQ."
authors = [
    {name = "su226", email = "thesu226@outlook.com"},
]
readme = "README.md"
keywords = ["nonebot", "nonebot2", "bot", "qq", "chatbot", "qqbot"]
license = {text = "MIT"}
requires-python = "~=3.9"
dependencies = [
    "nonebot2[aiohttp]~=2.3",
    "nonebot-adapter-onebot~=2.4",
    "nonebot-plugin-apscheduler~=0.4",
    "PyYAML~=6.0",
    "Pillow~=10.3",
    "pycairo~=1.26",
    "PyGObject~=3.48",
]

[project.optional-dependencies]
jieba = [
    "jieba~=0.42",
]
# 维基百科也需要 playwright
libzim = [
    "libzim~=3.4; python_version < \"3.13\"",
]
mctools = [
    "mctools~=1.3",
]
psutil = [
    "psutil~=5.9",
]
opencv = [
    "opencv-python-headless~=4.9",
]
sql = [
    "sqlmodel~=0.0",
    "aiosqlite~=0.20",
]
# 词云也需要 sql 和 jieba
wordcloud = [
    "wordcloud~=1.9",
    "emoji~=2.11",
]
grpc = [
    "protobuf~=5.26",
    "grpcio~=1.63",
]
playwright = [
    "playwright~=1.43",
]

[project.urls]
Homepage = "https://idhagnbot.su226.eu.org"
Repository = "https://github.com/su226/IdhagnBot"
Documentation = "https://idhagnbot.su226.eu.org"

[build-system]
requires = ["pdm-pep517<2,>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "ruff~=0.4",
    "isort>=5.13.2",
]
dev = [
    "grpc-stubs~=1.53",
    "mypy-protobuf~=3.6",
    "grpcio-tools~=1.63",
    "opencv-stubs~=0.0",
]

[tool.pdm.scripts]
start = "python bot.py"
bilibili_activity_compile = "tools/bilibili_activity_compile.sh"

[tool.isort]
multi_line_output = 5
combine_as_imports = true
line_length = 99
indent = "  "

[tool.pyright]
typeCheckingMode = "strict"
ignore = ["util/api_common/*/protos", "archived"]
pythonVersion = "3.9"
reportMissingTypeStubs = false
reportConstantRedefinition = false
reportPrivateUsage = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[tool.ruff]
extend-exclude = [
    "util/api_common/*/protos/*"
]
line-length = 99
indent-width = 2

[tool.ruff.lint]
extend-select = ["E501"]
# ruff 不支持 multi_line_output=5，使用 isort
ignore = ["I", "E741"]
