[project]
name = "idhagnbot"
version = "0.0.0"
description = "Simple chatbot for Tencent QQ."
authors = [
    {name = "su226", email = "thesu226@outlook.com"},
]
readme = "README.md"
keywords = ["nonebot", "nonebot2", "bot", "qq", "chatbot", "qqbot"]
license = {text = "MIT"}
requires-python = "~=3.9"
dependencies = [
    "nonebot2[aiohttp,fastapi]~=2.3",
    "nonebot-adapter-onebot~=2.4",
    "nonebot-plugin-apscheduler~=0.5",
    "PyYAML~=6.0",
    "Pillow~=10.4",
    "pycairo~=1.26",
    "PyGObject~=3.48",
]

[project.optional-dependencies]
jieba = [
    "jieba~=0.42",
]
# 维基百科也需要 playwright
libzim = [
    "libzim~=3.4; python_version < \"3.13\"",
]
mctools = [
    "mctools~=1.3",
]
psutil = [
    "psutil~=6.0",
]
opencv = [
    "opencv-python-headless~=4.10",
]
sql = [
    "sqlmodel~=0.0",
    "aiosqlite~=0.20",
]
# 词云也需要 sql 和 jieba
wordcloud = [
    "wordcloud~=1.9",
    "emoji~=2.12",
]
grpc = [
    "protobuf~=5.27",
    "grpcio~=1.65",
]
playwright = [
    "playwright~=1.46",
]

[project.urls]
Homepage = "https://idhagnbot.su226.eu.org"
Repository = "https://github.com/su226/IdhagnBot"
Documentation = "https://idhagnbot.su226.eu.org"

[build-system]
requires = ["pdm-pep517<2,>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "ruff~=0.5",
    "isort~=5.13",
]
dev = [
    "mypy-protobuf~=3.6",
    "grpcio-tools~=1.65",
]
stubs = [
    "grpc-stubs~=1.53",
    "opencv-stubs~=0.0",
    "types-Pillow~=10.2",
    "types-PyYAML~=6.0",
    "types-jieba~=0.0",
    "types-psutil~=6.0",
    "types-emoji~=2.1",
    "pygobject-stubs>=2.11.0",
]

[tool.pdm.scripts]
start = "python bot.py"
bilibili_activity_compile = "tools/bilibili_activity_compile.sh"

[tool.isort]
skip_glob = ["util/api_common/*/protos"]
multi_line_output = 5
combine_as_imports = true
line_length = 99
indent = "  "

[tool.pyright]
typeCheckingMode = "strict"
ignore = ["util/api_common/*/protos", "archived"]
pythonVersion = "3.9"
reportMissingTypeStubs = false
reportMissingModuleSource = false
reportConstantRedefinition = false
reportPrivateUsage = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[tool.ruff]
extend-exclude = [
    "util/api_common/*/protos"
]
line-length = 99
indent-width = 2
preview = true

[tool.ruff.lint]
extend-select = ["E501", "ERA", "RUF100", "COM", "C4"]
# ruff 不支持 multi_line_output=5，使用 isort
ignore = ["I", "E741"]
