[project]
name = "idhagnbot"
version = "0.0.0"
description = "Simple chatbot for Tencent QQ."
authors = [
    {name = "su226", email = "thesu226@outlook.com"},
]
readme = "README.md"
keywords = ["nonebot", "nonebot2", "bot", "qq", "chatbot", "qqbot"]
license = {text = "MIT"}
requires-python = "~=3.11"
dependencies = [
    "nonebot2[aiohttp,fastapi]>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-apscheduler>=0.5.0",
    "PyYAML>=6.0.3",
    "Pillow>=11.3.0",
    "pycairo>=1.28.0",
    "PyGObject>=3.54.5",
    "meme-generator>=0.2.2",
]

[project.optional-dependencies]
jieba = [
    "jieba>=0.42.1",
]
# 维基百科也需要 playwright
libzim = [
    "python-zim>=0.1.2",
]
mctools = [
    "mctools>=1.4.1",
]
psutil = [
    "psutil>=7.2.1",
]
opencv = [
    "opencv-python-headless>=4.12.0.88",
]
sql = [
    "sqlmodel>=0.0.31",
    "aiosqlite>=0.22.1",
]
# 词云也需要 sql 和 jieba
wordcloud = [
    "wordcloud>=1.9.5",
    "emoji>=2.15.0",
]
grpc = [
    "protobuf>=6.33.4",
    "grpcio>=1.76.0",
]
playwright = [
    "playwright>=1.57.0",
]
liferestart = [
    "liferestart @ git+https://github.com/su226/LifeRestartPy.git",
]

[project.urls]
Homepage = "https://idhagnbot.su226.eu.org"
Repository = "https://github.com/su226/IdhagnBot"
Documentation = "https://idhagnbot.su226.eu.org"

[build-system]
requires = ["pdm-pep517<2,>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python bot.py"
bilibili_activity_compile = "tools/bilibili_activity_compile.sh"

[tool.isort]
skip_glob = ["util/api_common/*/protos"]
multi_line_output = 5
combine_as_imports = true
line_length = 99
indent = "  "

[tool.pyright]
typeCheckingMode = "strict"
ignore = ["util/api_common/*/protos", "archived"]
pythonVersion = "3.9"
reportMissingTypeStubs = false
reportMissingModuleSource = false
reportConstantRedefinition = false
reportPrivateUsage = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[tool.ruff]
extend-exclude = [
    "util/api_common/*/protos"
]
line-length = 99
indent-width = 2
preview = true

[tool.ruff.lint]
extend-select = ["E501", "ERA", "RUF100", "COM", "C4"]
# ruff 不支持 multi_line_output=5，使用 isort
ignore = ["I", "E741"]

[dependency-groups]
dev = [
    "mypy-protobuf>=4.0.0",
    "grpcio-tools>=1.76.0",
]
lint = [
    "ruff>=0.14.11",
    "isort>=6.1.0",
]
stubs = [
    "grpc-stubs>=1.53.0.6",
    "opencv-stubs>=0.1.1",
    "types-Pillow>=10.2.0.20240822",
    "types-PyYAML>=6.0.12.20250915",
    "types-jieba>=0.0.7",
    "types-psutil>=7.2.1.20251231",
    "types-emoji>=2.1.0.3",
    "pygobject-stubs>=2.16.0",
]
